# FlowControl

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  TODO.txt  __init__.py  environment.yml  flowcontrol_UML.uxf  project.toml  pyproject.toml  pytest.ini
cavity/: ._main_flowsolver.py  ._run_closedloop_multix0.py  compute_attractor.py  main_flowsolver.py  run_closedloop_multix0.py  run_closedloop_upert.py  run_closedloop_x0.py  run_optimization.py
cylinder/: ._compute_eig_correction.py  ._create_cylinder_mesh.py  ._main_flowsolver.py  ._run_closedloop_x0.py  ._run_closedloop_x0_basin.py  ._run_closedloop_x0_fabrice.py  ._run_closedloop_x0_lco.py  ._run_closedloop_x0_save.py  ._run_multisine_cl_G8.py  ._run_multisine_cl_G8A.py  AbstractFlowSolver.py  AbtractFlowSolver.py  CylinderFlowSolver.py  FlowSolver.py  FlowSolverParameters.py  compute_eig_correction.py  compute_mean_flow.py  controller.py  copy_run_incremental_re.py  cylinderflowsolver.py  flowfield.py  flowsolver.py  flowsolverparameters.py  legacy_main_flowsolver.py  main_flowsolver.py  mesh_convergence.py  mesh_convergence_re_swipe.py  old_batchscript_cl_ms.sh  old_run_closedloop_ms.py  old_run_multisine_AWT.py  resolvent_computation.py  reynolds_critical_computation.py  run_bank.py  run_bank_1D.py  run_closedloop_x0.py  run_closedloop_x0_basin.py  run_closedloop_x0_fabrice.py  run_closedloop_x0_lco.py  run_closedloop_x0_list.py  run_closedloop_x0_save.py  (+23 more)
cylinder_vol/: compute_eig_correction.py  create_cylinder_mesh.py  main_flowsolver.py
docs/: FAQ.md  README.md  classes_coucou.html  code-advanced.md  code-basics.md  code-utility.md  development.md  examples.md  getting-started.md  index.md  installation.md  numerical-details.md  packages_coucou.html  third-party-tools.md  usage.md
flowcontrol/: actuator.py  controller.py  flowfield.py  flowsolver.py  flowsolverparameters.py  operatorgetter.py  sensor.py
tests/: conftest.py  test_actuator.py  test_controller.py  test_exporter.py  test_fem.py  test_flowfield.py  test_flowsolverparameters.py  test_linalg.py  test_lticontrol.py  test_lticontrol_vs_control.py  test_mpi.py  test_nsforms.py  test_optim.py  test_optim_algs.py  test_physics.py  test_sensor.py  test_signal.py  test_steadystate.py
utils/: ._gmsh_generate_cavity.py  ._gmsh_generate_cylinder.py  ._identification_utils.py  ._mesh_utils.py  ._optim_utils.py  ._utils_flowsolver.py  ._youla_utils.py  gmsh_generate_cavity.py  gmsh_generate_cylinder.py  identification_utils.py  (+5 more)
(+306 files in other folders)
