[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowcontrol"
version = "0.1.0"
description = "Flow simulation and feedback control with FEniCS/dolfin"
authors = [{name = "William Jussiau", email = "william.jussiau@gmail.com"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
# FEniCS 2019.1.0 and its transitive dependencies (dolfin, petsc4py, slepc4py)
# are conda-only and cannot be declared here.  Install the full environment with:
#   conda env create -n fenics --file environment.yml
dependencies = [
    "numpy>=1.24",
    "scipy>=1.14",
    "pandas>=2.2",
    "control>=0.10",
    "matplotlib",
    "joblib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
